[gd_scene load_steps=5 format=3 uid="uid://cjtbx50bilof3"]

[ext_resource type="FontFile" uid="uid://spn4ve4oisi6" path="res://Fonts/TripleN.ttf" id="1_efimw"]
[ext_resource type="Script" path="res://UI/Button/button.gd" id="2_te7do"]
[ext_resource type="Texture2D" uid="uid://c4ctbkhh5hk5j" path="res://UI/Button/flair.aseprite" id="2_ty8b6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5385"]
content_margin_left = 36.0
content_margin_top = 1.0
content_margin_right = 36.0
content_margin_bottom = 1.0

[node name="Button" type="Button"]
texture_filter = 1
theme_override_fonts/font = ExtResource("1_efimw")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/hover = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_l5385")
theme_override_styles/normal = SubResource("StyleBoxEmpty_l5385")
text = "Play"
flat = true
script = ExtResource("2_te7do")

[node name="FlairLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -18.0
offset_right = 32.0
offset_bottom = 14.0
grow_vertical = 2
texture = ExtResource("2_ty8b6")

[node name="FlairRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -18.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ty8b6")
flip_h = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
